# polo-pre

./: CMakeLists.txt  README.md  fib.polo
docs/: polo.md
examples/: call_libc.polo  call_libc.s  control.polo  demo.polo  enum.polo  function.polo  print.polo  simple.polo  struct.polo
polo-std/: _start.polo  _start.s
polo-std/std/: _Trait.polo  mem.polo
src/: ast.h  common.cpp  common.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  typechecker.cpp  typechecker.h
src/x64/: register.h  x64gen.cpp  x64gen.hpp
